Source solarized dark

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,3 +23,6 @@ bind-key C-a last-window
 setw -g aggressive-resize on
 
 set -g default-terminal "screen-256color"
+
+# Source solarized colours
+source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-dark.conf"
