Switch to 256 colours, add auto-{rename,source}

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-new-session
-
 set-option -g prefix C-a
 
 # Vim mode
@@ -19,10 +17,15 @@ set-option -g base-index 1
 # Toggle last window
 bind-key C-a last-window
 
-# Resize to mixmum size clients connected to a specific window
+# Resize to maximum size clients connected to a specific window
 setw -g aggressive-resize on
 
-set -g default-terminal "screen-256color"
+# Automatic window renaming
+set-window-option -g automatic-rename
 
 # Source solarized colours
-source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-dark.conf"
+set -g default-terminal "screen-256color"
+source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf"
+
+# Reload config
+bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"
