--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
+# Screen prefix
 set-option -g prefix C-a
+bind-key C-a last-window
 
 # Vim mode
 set-window-option -g mode-keys vi
@@ -13,9 +15,6 @@ bind - split-window -v
 
 # Start window numbering from 1
 set-option -g base-index 1
-
-# Toggle last window
-bind-key C-a last-window
 
 # Resize to maximum size clients connected to a specific window
 setw -g aggressive-resize on
