Add clipboard integration via xsel

--- a/tmux.conf
+++ b/tmux.conf
@@ -28,3 +28,7 @@ source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.c
 
 # Reload config
 bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"
+
+# Copy/paste to/from the X clipboard
+bind C-y run "tmux save-buffer - | xsel --clipboard"
+bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
