Add urlview integration

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,3 +32,6 @@ bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"
 # Copy/paste to/from the X clipboard
 bind C-y run "tmux save-buffer - | xsel --clipboard"
 bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
+
+# Open a split containing a list of URLs in the current pane
+bind-key u capture-pane \; save-buffer "$XDG_CACHE_HOME/tmux-buffer" \; split-window -l 10 "urlview $XDG_CACHE_HOME/tmux-buffer"
