--- a/tmux.conf
+++ b/tmux.conf
@@ -35,3 +35,8 @@ bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
 
 # Open a split containing a list of URLs in the current pane
 bind-key u capture-pane \; save-buffer "$XDG_CACHE_HOME/tmux-buffer" \; split-window -l 10 "urlview $XDG_CACHE_HOME/tmux-buffer"
+
+# Enable mouse support
+set-option -g mouse-select-pane on
+set-option -g mouse-select-window on
+set-window-option -g mode-mouse on
