--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,6 @@ bind-key u capture-pane \; save-buffer "$XDG_CACHE_HOME/tmux-buffer" \; split-wi
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
+
+# Disable noisy right-hand status bar
+set -g status-right ""
