Fix auto rename, add reload feedback

--- a/tmux.conf
+++ b/tmux.conf
@@ -17,17 +17,17 @@ bind - split-window -v
 set-option -g base-index 1
 
 # Resize to maximum size clients connected to a specific window
-setw -g aggressive-resize on
+set-window-option -g aggressive-resize on
 
 # Automatic window renaming
-set-window-option -g automatic-rename
+set-window-option -g automatic-rename on
 
 # Source solarized colours
 set -g default-terminal "screen-256color"
 source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf"
 
 # Reload config
-bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"
+bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"\; display-message "Config reloaded..."
 
 # Copy/paste to/from the X clipboard
 bind C-y run "tmux save-buffer - | xsel --clipboard"
