--- a/tmux.conf
+++ b/tmux.conf
@@ -40,3 +40,12 @@ set-window-option -g mode-mouse on
 
 # Disable noisy right-hand status bar
 set -g status-right ""
+
+# Vim-style copy/paste
+# See: http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
