--- a/tmux.conf
+++ b/tmux.conf
@@ -45,7 +45,6 @@ set -g status-right ""
 # See: http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/
 unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
+bind P paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
