--- a/tmux.conf
+++ b/tmux.conf
@@ -51,3 +51,6 @@ bind Escape copy-mode
 bind P paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+# Toggle the scrollbar
+bind-key b set-option -g status
