--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ set-window-option -g aggressive-resize on
 set-window-option -g automatic-rename on
 
 # Source solarized colours
-set -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf"
 
 # Reload config
@@ -42,7 +42,7 @@ set-option -g mouse-select-window on
 set-window-option -g mode-mouse on
 
 # Disable noisy right-hand status bar
-set -g status-right ""
+set-option -g status-right ""
 
 # Vim-style copy/paste
 # See: http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/
