--- a/tmux.conf
+++ b/tmux.conf
@@ -22,8 +22,9 @@ set-window-option -g aggressive-resize on
 # Automatic window renaming
 set-window-option -g automatic-rename on
 
-# Set 256 colours by default
+# Source solarized colours
 set-option -g default-terminal "screen-256color"
+source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf"
 
 # Reload config
 bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"\; display-message "Config reloaded..."
