Disable copy-mode timeout

--- a/tmux.conf
+++ b/tmux.conf
@@ -54,3 +54,6 @@ bind-key -t vi-copy 'y' copy-selection
 
 # Toggle the scrollbar
 bind-key b set-option -g status
+
+# Disable escape timeout (instant copy mode)
+set-option -sg escape-time 0
