Add zoom-win mapping

--- a/tmux.conf
+++ b/tmux.conf
@@ -57,3 +57,6 @@ bind-key b set-option -g status
 
 # Disable escape timeout (instant copy mode)
 set-option -sg escape-time 0
+
+# Zoom split
+bind-key | resize-pane -Z
