--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/tmux-colors-solarized"]
-	path = vendor/tmux-colors-solarized
+[submodule ".tmux/vendor/seebi/tmux-colors-solarized"]
+	path = .tmux/vendor/seebi/tmux-colors-solarized
 	url = https://github.com/seebi/tmux-colors-solarized.git
