--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,17 +24,17 @@ set-window-option -g automatic-rename on
 
 # Source solarized colours
 set-option -g default-terminal "screen-256color"
-source-file "$XDG_CONFIG_HOME/tmux/vendor/tmux-colors-solarized/tmuxcolors-256.conf"
+source-file "$HOME/.tmux/vendor/seebi/tmux-colors-solarized/tmuxcolors-256.conf"
 
 # Reload config
-bind r source-file "$XDG_CONFIG_HOME/tmux/tmux.conf"\; display-message "Config reloaded..."
+bind r source-file "$HOME/.tmux.conf"\; display-message "Config reloaded..."
 
 # Copy/paste to/from the X clipboard
 bind C-y run "tmux save-buffer - | xsel --clipboard"
 bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
 
 # Open a split containing a list of URLs in the current pane
-bind-key u capture-pane \; save-buffer "$XDG_CACHE_HOME/tmux-buffer" \; split-window -l 10 "urlview $XDG_CACHE_HOME/tmux-buffer"
+bind-key u capture-pane \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
 
 # Enable mouse support
 set-option -g mouse-select-pane on
