Open panes and windows with current path
See: http://unix.stackexchange.com/q/12032

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,11 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Intuitive window-splitting keys
-bind \ split-window -h
-bind - split-window -v
+bind '"' split-window -c "#{pane_current_path}"
+bind - split-window -vc "#{pane_current_path}"
+bind % split-window -hc "#{pane_current_path}"
+bind \ split-window -hc "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 # Start window numbering from 1
 set-option -g base-index 1
