fix: tmuxinator pane workaround
See: https://github.com/tmuxinator/tmuxinator/issues/225

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Start window numbering from 1
 set-option -g base-index 1
+set-option -g pane-base-index 1
 
 # Resize to maximum size clients connected to a specific window
 set-window-option -g aggressive-resize on
