--- a/.tmux.conf
+++ b/.tmux.conf
@@ -38,7 +38,7 @@ bind C-y run "tmux save-buffer - | xsel --clipboard"
 bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
 
 # Open a split containing a list of URLs in the current pane
-bind-key u capture-pane \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
+bind-key u capture-pane -J \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
 
 # Enable mouse support
 set-option -g mouse-select-pane on
