--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,3 +64,6 @@ set-option -sg escape-time 0
 
 # Zoom split
 bind-key | resize-pane -Z
+
+# Plugins
+run-shell "$HOME/.tmux/vendor/tmux-plugins/tmux-resurrect/resurrect.tmux"
