feat(resurrect): restore vim sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -65,5 +65,6 @@ set-option -sg escape-time 0
 # Zoom split
 bind-key | resize-pane -Z
 
-# Plugins
+# tmux-resurrect
 run-shell "$HOME/.tmux/vendor/tmux-plugins/tmux-resurrect/resurrect.tmux"
+set-option -g @resurrect-strategy-vim 'session'
