fix: remove old mouse opts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,9 +41,7 @@ bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
 bind-key u capture-pane -J \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
 
 # Enable mouse support
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set-option -g mouse on
 
 # Disable noisy right-hand status bar
 set-option -g status-right ""
