--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,8 +34,10 @@ source-file "$HOME/.tmux/vendor/seebi/tmux-colors-solarized/tmuxcolors-256.conf"
 bind r source-file "$HOME/.tmux.conf"\; display-message "Config reloaded..."
 
 # Copy/paste to/from the X clipboard
-bind C-y run "tmux save-buffer - | xsel --clipboard"
-bind C-p run "tmux set-buffer \"$(xsel --clipboard)\"; tmux paste-buffer"
+unbind [
+bind Escape copy-mode
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 # Open a split containing a list of URLs in the current pane
 bind-key u capture-pane -J \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
@@ -45,14 +47,6 @@ set-option -g mouse on
 
 # Disable noisy right-hand status bar
 set-option -g status-right ""
-
-# Vim-style copy/paste
-# See: http://jasonwryan.com/blog/2011/06/07/copy-and-paste-in-tmux/
-unbind [
-bind Escape copy-mode
-bind P paste-buffer
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Toggle the scrollbar
 bind-key b set-option -g status
