fix: use interactive shells by default

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,9 @@
 set-option -g prefix C-a
 bind-key C-a last-window
 
+# Open new windows/splits in an interactive shell, not login shell (by default)
+set-option -g default-command "$SHELL"
+
 # Vim mode
 set-window-option -g mode-keys vi
 bind h select-pane -L
