feat: solarized -> onedark

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,9 +29,10 @@ set-window-option -g aggressive-resize on
 # Automatic window renaming
 set-window-option -g automatic-rename on
 
-# Source solarized colours
-set-option -g default-terminal "screen-256color"
-source-file "$HOME/.tmux/vendor/seebi/tmux-colors-solarized/tmuxcolors-256.conf"
+# Source colours
+set-option -g default-terminal "tmux-256color"
+set-option -ga terminal-overrides ",tmux-256color:Tc,xterm-256color:Tc"
+source-file "$HOME/.tmux/tmux-colours-onedark/tmux-colours-onedark.conf"
 
 # Reload config
 bind r source-file "$HOME/.tmux.conf"\; display-message "Config reloaded..."
