--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,8 +40,8 @@ bind r source-file "$HOME/.tmux.conf"\; display-message "Config reloaded..."
 # Copy/paste to/from the X clipboard
 unbind [
 bind Escape copy-mode
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
+bind-key p run "pbpaste | tmux load-buffer - ; tmux paste-buffer"
 
 # Open a split containing a list of URLs in the current pane
 bind-key u capture-pane -J \; save-buffer "$HOME/.tmux/tmux-buffer" \; split-window -l 10 "urlview $HOME/.tmux/tmux-buffer"
@@ -60,3 +60,6 @@ set-option -sg escape-time 0
 
 # Zoom split
 bind-key | resize-pane -Z
+
+# Scrollback buffer
+set-option -g history-limit 10000
